--- a/Sistema-Gestion-Agro-Industrial/nbproject/project.properties
+++ b/Sistema-Gestion-Agro-Industrial/nbproject/project.properties
@@ -29,7 +29,19 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.appframework-1.0.3.jar=libs\\appframework-1.0.3.jar
+file.reference.commons-beanutils-1.8.0.jar=libs\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=libs\\commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=libs\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=libs\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=libs\\commons-logging-1.1.jar
+file.reference.groovy-all-1.5.5.jar=libs\\groovy-all-1.5.5.jar
+file.reference.hsqldb.jar=libs\\hsqldb.jar
+file.reference.iText-2.1.0.jar=libs\\iText-2.1.0.jar
+file.reference.jasperreports-3.7.0.jar=libs\\jasperreports-3.7.0.jar
 file.reference.sqljdbc4.jar=libs\\sqljdbc4.jar
+file.reference.substance.jar=libs\\substance.jar
+file.reference.swing-worker-1.1.jar=libs\\swing-worker-1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +51,19 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.appframework-1.0.3.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.iText-2.1.0.jar}:\
+    ${file.reference.jasperreports-3.7.0.jar}:\
+    ${file.reference.substance.jar}:\
+    ${file.reference.swing-worker-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
