--- a/Sistema-Gestion-Agro-Industrial/nbproject/project.properties
+++ b/Sistema-Gestion-Agro-Industrial/nbproject/project.properties
@@ -3,7 +3,6 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -51,7 +50,6 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}:\
     ${file.reference.appframework-1.0.3.jar}:\
     ${file.reference.commons-beanutils-1.8.0.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
@@ -62,6 +60,7 @@ javac.classpath=\
     ${file.reference.hsqldb.jar}:\
     ${file.reference.iText-2.1.0.jar}:\
     ${file.reference.jasperreports-3.7.0.jar}:\
+    ${file.reference.sqljdbc4.jar}:\
     ${file.reference.substance.jar}:\
     ${file.reference.swing-worker-1.1.jar}
 # Space-separated list of extra javac options
@@ -70,8 +69,8 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -90,6 +89,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
