--- a/Sistema-Gestion-Agro-Industrial/nbproject/project.properties
+++ b/Sistema-Gestion-Agro-Industrial/nbproject/project.properties
@@ -38,9 +38,11 @@ file.reference.groovy-all-1.5.5.jar=libs\\groovy-all-1.5.5.jar
 file.reference.hsqldb.jar=libs\\hsqldb.jar
 file.reference.iText-2.1.0.jar=libs\\iText-2.1.0.jar
 file.reference.jasperreports-3.7.0.jar=libs\\jasperreports-3.7.0.jar
+file.reference.jfreechart-1.0.17.jar=libs\\jfreechart-1.0.17.jar
 file.reference.sqljdbc4.jar=libs\\sqljdbc4.jar
 file.reference.substance.jar=libs\\substance.jar
 file.reference.swing-worker-1.1.jar=libs\\swing-worker-1.1.jar
+file.reference.zxing-2.1.jar=libs\\zxing-2.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -62,7 +64,9 @@ javac.classpath=\
     ${file.reference.jasperreports-3.7.0.jar}:\
     ${file.reference.sqljdbc4.jar}:\
     ${file.reference.substance.jar}:\
-    ${file.reference.swing-worker-1.1.jar}
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${file.reference.zxing-2.1.jar}:\
+    ${file.reference.jfreechart-1.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
